-
Bug
-
Resolution: Done
-
P0: Blocker
-
6.0.0 Alpha
-
None
-
8da588070a19e128aaf327d13c91524a45db6d07 (qt/qttools/dev)
-
Da Vinci sprint 14, Da Vinci sprint 15
agent:2020/08/17 06:54:46 build.go:302: docbookgenerator.cpp: In member function ‘virtual int DocBookGenerator::generateAtom(const Atom*, const Node*, CodeMarker*)’:
agent:2020/08/17 06:54:46 build.go:302: docbookgenerator.cpp:417:74: error: no matching function for call to ‘DocBookGenerator::generateAnnotatedList(const Node*&, NodeMap&, const QString&)’
agent:2020/08/17 06:54:46 build.go:302: 417 | generateAnnotatedList(relative, m, atom->string());
agent:2020/08/17 06:54:46 build.go:302: | ^
agent:2020/08/17 06:54:46 build.go:302: In file included from docbookgenerator.cpp:29:
agent:2020/08/17 06:54:46 build.go:302: docbookgenerator.h:100:10: note: candidate: ‘void DocBookGenerator::generateAnnotatedList(const Node*, const NodeList&, const QString&)’
agent:2020/08/17 06:54:46 build.go:302: 100 | void generateAnnotatedList(const Node *relative, const NodeList &nodeList,
agent:2020/08/17 06:54:46 build.go:302: | ^~~~~~~~~~~~~~~~~~~~~
agent:2020/08/17 06:54:46 build.go:302: docbookgenerator.h:100:70: note: no known conversion for argument 2 from ‘NodeMap’ {aka ‘QMap<QString, Node*>’} to ‘const NodeList&’ {aka ‘const QList<Node*>&’}
agent:2020/08/17 06:54:46 build.go:302: 100 | void generateAnnotatedList(const Node *relative, const NodeList &nodeList,
agent:2020/08/17 06:54:46 build.go:302: | ~~~~~~~~~~~~~~~~^~~~~~~~
agent:2020/08/17 06:54:46 build.go:302: docbookgenerator.h:102:10: note: candidate: ‘void DocBookGenerator::generateAnnotatedList(const Node*, const NodeMultiMap&, const QString&)’
agent:2020/08/17 06:54:46 build.go:302: 102 | void generateAnnotatedList(const Node *relative, const NodeMultiMap &nmm,
agent:2020/08/17 06:54:46 build.go:302: | ^~~~~~~~~~~~~~~~~~~~~
agent:2020/08/17 06:54:46 build.go:302: docbookgenerator.h:102:74: note: no known conversion for argument 2 from ‘NodeMap’ {aka ‘QMap<QString, Node*>’} to ‘const NodeMultiMap&’ {aka ‘const QMultiMap<QString, Node*>&’}
agent:2020/08/17 06:54:46 build.go:302: 102 | void generateAnnotatedList(const Node *relative, const NodeMultiMap &nmm,
agent:2020/08/17 06:54:46 build.go:302: | ~~~~~~~~~~~~~~~~~~~~^~~
agent:2020/08/17 06:54:46 build.go:302: docbookgenerator.cpp:427:66: error: cannot convert ‘NodeMultiMap’ {aka ‘QMultiMap<QString, Node*>’} to ‘NodeMap&’ {aka ‘QMap<QString, Node*>&’}
agent:2020/08/17 06:54:46 build.go:302: 427 | generateClassHierarchy(relative, m_qdb->getCppClasses());
agent:2020/08/17 06:54:46 build.go:302: | ~~~~~~~~~~~~~~~~~~~~^~
agent:2020/08/17 06:54:46 build.go:302: | |
agent:2020/08/17 06:54:46 build.go:302: | NodeMultiMap {aka QMultiMap<QString, Node*>}
agent:2020/08/17 06:54:46 build.go:302: In file included from docbookgenerator.cpp:29:
agent:2020/08/17 06:54:46 build.go:302: docbookgenerator.h:131:64: note: initializing argument 2 of ‘void DocBookGenerator::generateClassHierarchy(const Node*, NodeMap&)’
agent:2020/08/17 06:54:46 build.go:302: 131 | void generateClassHierarchy(const Node *relative, NodeMap &classMap);
agent:2020/08/17 06:54:46 build.go:302: | ~~~~~~~~~^~~~~~~~
agent:2020/08/17 06:54:46 build.go:302: docbookgenerator.cpp: In member function ‘void DocBookGenerator::generateLegaleseList(const Node*)’:
agent:2020/08/17 06:54:46 build.go:302: docbookgenerator.cpp:1320:74: error: conversion from ‘QMultiMap<Text, const Node*>::const_iterator’ to non-scalar type ‘QMap<Text, const Node*>::ConstIterator’ {aka ‘QMap<Text, const Node*>::const_iterator’} requested
agent:2020/08/17 06:54:46 build.go:302: 1320 | QMap<Text, const Node *>::ConstIterator it = legaleseTexts.constBegin();
agent:2020/08/17 06:54:46 build.go:302: | ~~~~~~~~~~~~~~~~~~~~~~~~^~
agent:2020/08/17 06:54:46 build.go:302: docbookgenerator.cpp:1321:15: error: no match for ‘operator!=’ (operand types are ‘QMap<Text, const Node*>::ConstIterator’ {aka ‘QMap<Text, const Node*>::const_iterator’} and ‘QMultiMap<Text, const Node*>::const_iterator’)
agent:2020/08/17 06:54:46 build.go:302: 1321 | while (it != legaleseTexts.constEnd()) {
agent:2020/08/17 06:54:46 build.go:302: | ~~ ^~ ~~~~~~~~~~~~~~~~~~~~~~~~
agent:2020/08/17 06:54:46 build.go:302: | | |
agent:2020/08/17 06:54:46 build.go:302: | | QMultiMap<Text, const Node*>::const_iterator
agent:2020/08/17 06:54:46 build.go:302: | QMap<Text, const Node*>::ConstIterator {aka QMap<Text, const Node*>::const_iterator}
agent:2020/08/17 06:54:46 build.go:302: In file included from /home/qt/work/install/include/QtCore/qstring.h:50,
agent:2020/08/17 06:54:46 build.go:302: from /home/qt/work/install/include/QtCore/qcoreapplication.h:44,
agent:2020/08/17 06:54:46 build.go:302: from location.h:36,
agent:2020/08/17 06:54:46 build.go:302: from doc.h:36,
agent:2020/08/17 06:54:46 build.go:302: from node.h:33,
agent:2020/08/17 06:54:46 build.go:302: from atom.h:32,
agent:2020/08/17 06:54:46 build.go:302: from codemarker.h:32,
agent:2020/08/17 06:54:46 build.go:302: from docbookgenerator.h:32,
agent:2020/08/17 06:54:46 build.go:302: from docbookgenerator.cpp:29:
Details: https://testresults.qt.io/coin/integration/qt/qttools/tasks/1597647145
Tested changes (refs/builds/qtci/dev/1597647126):
https://codereview.qt-project.org/c/qt/qttools/+/310435/1 Update dependencies on 'dev' in qt/qttools
- is duplicated by
-
QTBUG-86032 qdoc: Fix compilation issues due to QMap/QMultiMap split
-
- Closed
-
-
QTBUG-85970 Various build errors in qttools
-
- Closed
-
| For Gerrit Dashboard: QTBUG-86074 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 310524,5 | qdoc: Adapt to recent changes in Q(Multi)Map | dev | qt/qttools | Status: MERGED | +2 | 0 |