qdoc: Adapt to recent changes in Q(Multi)Map

Various methods assumed that QMultiMap inherits from QMap.

Fixes: QTBUG-86074
Change-Id: If5ae33e524d433eed5743f94b98be483484969a9
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>
Reviewed-by: Paul Wicking <paul.wicking@qt.io>